# mps-notifications

./: CMakeLists.txt  main.cpp  mps-notifications.service  setup.sh  uninstall.sh
include/: API.h  Firebase.h  Services.h
src/: API.cpp  Firebase.cpp  Services.cpp
